Fix small tables not filling container on mobile

--- a/src/shared/components/RichTable.scss
+++ b/src/shared/components/RichTable.scss
@@ -42,6 +42,7 @@
 
     @include media-breakpoint-down(sm) {
       width: auto;
+      min-width: 100%;
     }
   }
 
